--- a/alarms/Dockerfile
+++ b/alarms/Dockerfile
@@ -2,10 +2,13 @@ FROM shankershawn/python:3
 #RUN ["mkdir", "gitrepos"]
 #WORKDIR gitrepos
 #RUN ["git", "clone", "https://github.com/shankershawn/raspi-piezo.git"]
-#RUN ["mkdir", "-p", "raspi-piezo-alarms"]
-#WORKDIR alarms
+RUN ["mkdir", "-p", "raspi-piezo/alarms"]
 
-CMD ["ls"]
-#CMD ["alarmMain.py"]
-#ENTRYPOINT ["python3"]
+WORKDIR raspi-piezo/alarms
+
+COPY *.py ./
+
+CMD ["alarmMain.py"]
+
+ENTRYPOINT ["python3"]
 
